read mcmc sample included

--- a/AuxCode/Python/main.ipynb
+++ b/AuxCode/Python/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -163,10 +163,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'plots' from '/net/bootes/export/data1/Workspace/GitHub_Python_plots/plots.py'>"
+       "<module 'plots' from '/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py'>"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -189,7 +189,8 @@
      "output_type": "stream",
      "text": [
       "Doing SMF\n",
-      "Doing metals_vs_stellarmass"
+      "\n",
+      "All plots done\n"
      ]
     },
     {
@@ -197,62 +198,7 @@
      "output_type": "stream",
      "text": [
       "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:110: RuntimeWarning: divide by zero encountered in log10\n",
-      "  subplot.plot(hist[1][0:len(hist[1][:])-1]+bin/2.,np.log10(hist[0][:]/(Volume_MR*bin)),\n",
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/procedures.py:214: RuntimeWarning: divide by zero encountered in log10\n",
-      "  mass= np.log10(G0_MR['StellarMass']*1.e10*Hubble_h) + np.random.randn(len(G0_MR['StellarMass']))*0.08*(1+redshift)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Doing BHBM"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:195: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  if(opt_detailed_enrichment==0):\n",
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:195: RuntimeWarning: divide by zero encountered in log10\n",
-      "  if(opt_detailed_enrichment==0):\n",
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:271: RuntimeWarning: divide by zero encountered in log10\n",
-      "  #drawedges=False, filled=True, extendfrac=None, extendrect=False, label='')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Doing SFRF\n",
-      "Doing gas_fraction\n",
-      "Doing HI_MF"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:328: RuntimeWarning: divide by zero encountered in log10\n",
-      "  SFR=(np.log10(G0_MR['Sfr']*Hubble_h**2))\n",
-      "/net/bootes/export/data1/Workspace/PR_GitHub_Hen15/AuxCode/Python/plots.py:481: RuntimeWarning: divide by zero encountered in log10\n",
-      "  HI=(np.log10(G0_MR['ColdGas']*0.54*1.e10*Hubble_h))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Doing sfr_vs_stellar_mass\n",
-      "Doing ur_vs_r\n",
-      "Doing UVJ_colour\n",
-      "Doing redfraction_color_cut\n",
-      "\n",
-      "All plots done\n"
+      "  subplot.plot(hist[1][0:len(hist[1][:])-1]+bin/2.,np.log10(hist[0][:]/(Volume_MR*bin)),\n"
      ]
     }
    ],
